samples/_failures_safe/1761375219_e40c55_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eed7bbb2.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_eed7bbb2.c:144:26: error: expected ‘;’ at end of input
  144 |     for (int i = 0; i < m
      |                          ^
      |                          ;
./samples/SAFE/__tmp_eed7bbb2.c:144:5: error: expected declaration or statement at end of input
  144 |     for (int i = 0; i < m
      |     ^~~
